<?xml version="1.0" encoding="utf-8"?>
<LinearLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:orientation="vertical"
    tools:context=".RecipeDetailsActivity">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Recipe Details"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/recipe_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvMealSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:padding="8dp"
                android:text="@string/source"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imgMeal"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="8dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tvMealSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:maxLines="5"
                android:padding="8dp"
                android:text="@string/summary"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="normal" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerMealInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/similar_recipes"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerMealSimilar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <TextView
                android:id="@+id/tvIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="Ingredients"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerMealIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>